# SLUG

./: .gitignore  CMakeLists.txt  Makefile  README.md  SLUG  install.sh  justfile
assets/: dev_shadow.xcf
src/: animation.c  animation.h  collisions.c  collisions.h  defines.c  defines.h  display.c  display.h  game.c  game.h  main.c  map.c  map.h  player.c  player.h
